[package]
name = "tweet-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
oauth-client = "0.8.0"
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
rand = "0.8.5"
chrono = "0.4.23"
thiserror = "1.0.31"
base64 = "0.13"
image = "0.24"
bytes = "1.3.0"
